// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots atoms|Searchbar animated 1`] = `
.c0 {
  padding: 12px;
}

.c2 {
  font-family: 'Fira Sans',sans-serif;
  font-weight: normal;
  font-size: 16px;
  color: #222;
  line-height: 1.5;
  font-size: 1rem;
  box-sizing: border-box;
  padding: calc(0.5em - 1px) 0.5em;
  border-radius: 4px;
  outline: 0;
  border: 0;
  --focus-color: 0,168,216;
  display: block;
  width: 100%;
  border: 1px solid #eee;
  background-color: #eee;
}

.c2:hover {
  border-bottom: 1px solid rgba(var(--focus-color),0.5);
}

.c2:focus {
  border-bottom: 1px solid rgba(var(--focus-color),1);
}

.c2::-webkit-input-placeholder {
  color: currentcolor;
  opacity: 0.5;
}

.c2::-moz-placeholder {
  color: currentcolor;
  opacity: 0.5;
}

.c2:-ms-input-placeholder {
  color: currentcolor;
  opacity: 0.5;
}

.c2::placeholder {
  color: currentcolor;
  opacity: 0.5;
}

.c2[disabled] {
  cursor: not-allowed;
  box-shadow: inset 0 0 999em rgba(128,128,128,0.2);
}

.c1 {
  background-color: #fff;
  border-color: transparent;
  will-change: padding-left;
  -webkit-transition: padding-left .1s ease;
  transition: padding-left .1s ease;
}

.c1:hover,
.c1:focus {
  border-color: transparent;
}

.c1:hover,
.c1:focus {
  padding-left: 1em;
}

.c1:hover,
.c1:focus {
  background-color: #eee;
}

<div
  className="c0"
>
  <input
    className="c1 c2"
    onChange={[Function]}
    placeholder="Search..."
    prefix={
      <ForwardRef
        offSet={10}
      >
        <MdSearch />
      </ForwardRef>
    }
    type="text"
  />
</div>
`;

exports[`Storyshots atoms|Searchbar default 1`] = `
.c0 {
  padding: 12px;
}

.c2 {
  font-family: 'Fira Sans',sans-serif;
  font-weight: normal;
  font-size: 16px;
  color: #222;
  line-height: 1.5;
  font-size: 1rem;
  box-sizing: border-box;
  padding: calc(0.5em - 1px) 0.5em;
  border-radius: 4px;
  outline: 0;
  border: 0;
  --focus-color: 0,168,216;
  display: block;
  width: 100%;
  border: 1px solid #eee;
  background-color: #eee;
}

.c2:hover {
  border-bottom: 1px solid rgba(var(--focus-color),0.5);
}

.c2:focus {
  border-bottom: 1px solid rgba(var(--focus-color),1);
}

.c2::-webkit-input-placeholder {
  color: currentcolor;
  opacity: 0.5;
}

.c2::-moz-placeholder {
  color: currentcolor;
  opacity: 0.5;
}

.c2:-ms-input-placeholder {
  color: currentcolor;
  opacity: 0.5;
}

.c2::placeholder {
  color: currentcolor;
  opacity: 0.5;
}

.c2[disabled] {
  cursor: not-allowed;
  box-shadow: inset 0 0 999em rgba(128,128,128,0.2);
}

.c1 {
  background-color: #fff;
  border-color: transparent;
}

.c1:hover,
.c1:focus {
  border-color: transparent;
}

.c1:hover,
.c1:focus {
  background-color: #eee;
}

<div
  className="c0"
>
  <input
    className="c1 c2"
    onChange={[Function]}
    placeholder="Search..."
    prefix={
      <ForwardRef
        offSet={10}
      >
        <MdSearch />
      </ForwardRef>
    }
    type="text"
  />
</div>
`;

exports[`Storyshots atoms|Searchbar flat 1`] = `
.c0 {
  padding: 12px;
}

.c2 {
  font-family: 'Fira Sans',sans-serif;
  font-weight: normal;
  font-size: 16px;
  color: #222;
  line-height: 1.5;
  font-size: 1rem;
  box-sizing: border-box;
  padding: calc(0.5em - 1px) 0.5em;
  border-radius: 4px;
  outline: 0;
  border: 0;
  --focus-color: 0,168,216;
  display: block;
  width: 100%;
  padding: 0;
}

.c2::-webkit-input-placeholder {
  color: currentcolor;
  opacity: 0.5;
}

.c2::-moz-placeholder {
  color: currentcolor;
  opacity: 0.5;
}

.c2:-ms-input-placeholder {
  color: currentcolor;
  opacity: 0.5;
}

.c2::placeholder {
  color: currentcolor;
  opacity: 0.5;
}

.c2[disabled] {
  cursor: not-allowed;
  box-shadow: inset 0 0 999em rgba(128,128,128,0.2);
}

.c1 {
  background-color: #fff;
  border-color: transparent;
}

.c1:hover,
.c1:focus {
  border-color: transparent;
}

<div
  className="c0"
>
  <input
    className="c1 c2"
    onChange={[Function]}
    placeholder="Search..."
    prefix={
      <ForwardRef
        offSet={10}
      >
        <MdSearch />
      </ForwardRef>
    }
    type="text"
  />
</div>
`;

exports[`Storyshots atoms|Searchbar with padding 1`] = `
.c0 {
  padding: 12px;
}

.c2 {
  font-family: 'Fira Sans',sans-serif;
  font-weight: normal;
  font-size: 16px;
  color: #222;
  line-height: 1.5;
  font-size: 1rem;
  box-sizing: border-box;
  padding: calc(0.5em - 1px) 0.5em;
  border-radius: 4px;
  outline: 0;
  border: 0;
  --focus-color: 0,168,216;
  display: block;
  width: 100%;
  border: 1px solid #eee;
  background-color: #eee;
}

.c2:hover {
  border-bottom: 1px solid rgba(var(--focus-color),0.5);
}

.c2:focus {
  border-bottom: 1px solid rgba(var(--focus-color),1);
}

.c2::-webkit-input-placeholder {
  color: currentcolor;
  opacity: 0.5;
}

.c2::-moz-placeholder {
  color: currentcolor;
  opacity: 0.5;
}

.c2:-ms-input-placeholder {
  color: currentcolor;
  opacity: 0.5;
}

.c2::placeholder {
  color: currentcolor;
  opacity: 0.5;
}

.c2[disabled] {
  cursor: not-allowed;
  box-shadow: inset 0 0 999em rgba(128,128,128,0.2);
}

.c1 {
  padding: 1.25em;
  width: 500px;
  background-color: #fff;
  border-color: transparent;
}

.c1:hover,
.c1:focus {
  border-color: transparent;
}

.c1:hover,
.c1:focus {
  background-color: #eee;
}

<div
  className="c0"
>
  <input
    className="c1 c2"
    onChange={[Function]}
    placeholder="Search..."
    prefix={
      <ForwardRef
        offSet={10}
      >
        <MdSearch />
      </ForwardRef>
    }
    type="text"
    width={500}
  />
</div>
`;
